--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ env:
   - PLAY_VERSION=1.2.4
 before_script:
   - wget http://downloads.typesafe.com/releases/play-${PLAY_VERSION}.zip
-  - unzip -q play-${PLAY_VERSION}.zip
+  - unzip -oq play-${PLAY_VERSION}.zip
 script: play-${PLAY_VERSION}/play test
