--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ env:
 before_script:
   - wget http://downloads.typesafe.com/releases/play-${PLAY_VERSION}.zip
   - unzip -oq play-${PLAY_VERSION}.zip
-script: play-${PLAY_VERSION}/play cves/test
+script: play-${PLAY_VERSION}/play test cves
