--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ env:
 before_script:
   - wget http://downloads.typesafe.com/releases/play-${PLAY_VERSION}.zip
   - unzip -oq play-${PLAY_VERSION}.zip
-#script: play-${PLAY_VERSION}/play start cves -Dprecompiled=true
-script: sbt test cves
+script: play-${PLAY_VERSION}/play precompile cves
+#-Dprecompiled=true
+#script: sbt test cves
